# neptune-wallet-app

./: .gitignore  Makefile  package.json  playwright.config.ts
.github/workflows/: main.yml  playwright.yml
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: gui.rs  lib.rs
src-tauri/src/command/: commands.rs
src-tauri/src/config/: wallet.rs
src-tauri/src/rpc/: commands.rs  mod.rs
src-tauri/src/rpc_client/: mod.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/wallet/: incoming_randomness.rs  input.rs  key_cache.rs  keys.rs  mod.rs  spend.rs  sync.rs  wallet_block.rs  wallet_state_table.rs
src/commands/: wallet.ts
src/components/: UpdateHandler.tsx
src/components/base/navbar-links-group/: index.tsx
src/components/header/: withTitlePageHeader.tsx
src/pages/addresses/: index.tsx
src/pages/batch/: index.tsx
src/pages/create/component/: confirm-secret.tsx  secure-wallet.tsx
src/pages/log/: index.tsx
src/pages/settings/: index.tsx
src/pages/wallet/component/: action-menu.tsx  create-wallet.tsx  walletTable.tsx
src/routers/: index.tsx
src/store/: types.ts
src/tests/: amounts.ts
src/utils/: import-wallet-randomness.ts  math-util.ts
src/utils/api/: types.ts
tests/: smoke.spec.ts
