[workspace]
members = []
resolver = "2"

[package]
name = "neptune-wallet"
version = "3.0.7"
description = "A lightweight wallet for Neptune Cash"
authors = ["vxblocks", "Triton Software AG"]
edition = "2021"

[lib]
name = "wallet"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
chrono = "0.4.42"

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
], optional = true }

tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2" }
tauri-plugin-single-instance = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-updater = "2.10.0"

aes-gcm = "0.10.3"
anyhow = { version = "1.0", features = ["backtrace"] }
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["erased-json", "typed-header"] }
bincode = "1.3"
clap = "4.5.32"
dashmap = "6.1.0"
dialoguer = { version = "0.11.0", optional = true }
enum_dispatch = "0.3.13"
futures = "0.3.31"
hex = "0.4.3"
hkdf = "0.12.4"
itertools = "0.14.0"
neptune-cash = "0.11.0"
neptune-rpc-client = "0.11.0"
num-traits = "0.2.19"
once_cell = "1.21.3"
os_info = { version = "3.7.0", features = ["serde"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
rand = "0.9.0"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
sqlx_migrator = { version = "0.18.0", features = ["sqlite"] }
strum = "0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full", "tracing"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "time", "fmt"] }
zstd = "0.13.3"
tauri-plugin-process = "2"

[dev-dependencies]
tracing-test = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
openssl-sys = { version = "0.9.106", features = ["vendored"] }

[features]
default = ["gui"]
dev-release = [
    "tauri/devtools"
]
gui = [
    "dep:tauri",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-opener",
    "dep:tauri-build",
]

cli = ["dep:dialoguer"]

[profile.release.package.triton-vm]
opt-level = 3
debug = false
incremental = false
debug-assertions = false
overflow-checks = false

# Optimize heavy dependencies even in debug mode to prevent stack overflows
[profile.dev.package.triton-vm]
opt-level = 1

[profile.dev.package.twenty-first] # Dependency of triton-vm
opt-level = 1

[profile.dev.build-override]
opt-level = 2

[profile.release]
opt-level = 3

# release profile hardening
debug = false
overflow-checks = true
lto = true
strip = "symbols"
panic = "abort"

[patch.crates-io]
leveldb-sys = { path = "../leveldb-sys" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(desktop)"] }
